# podcast-pipeline

./: .gitignore  README.md  pyproject.toml  rag-workflow.md  test.py
app/: main.py
app/bulk/chunk/: README.md  chunk.py
app/bulk/embed/: README.md  embed.py
app/bulk/insert/: README.md  insert.py
app/bulk/rename/: rename.py
app/chunk/: README.md  __init__.py  __main__.py  chunk.py
app/embed/: README.md  __init__.py  __main__.py  embed.py
app/insert/: README.md  __init__.py  __main__.py  insert.py
app/label/: README.md  __init__.py  __main__.py  label.py  label_utils.py
app/query/: README.md  __main__.py  query.py
app/rename/: README.md  __init__.py  __main__.py  rename.py
app/retrieve/: README.md  __main__.py  retrieve.py
app/split/: README.md  __init__.py  __main__.py  split.py
app/transcribe/: Dockerfile  README.md
app/utils/: __init__.py  chunking.py  llm.py  metadata.py  nlp.py  transcript.py  utils.py
notebooks/: README.md  chat.ipynb  chunk.ipynb  indexes.ipynb  meta.ipynb  notebook.ipynb  query.ipynb  text.ipynb  tokens.ipynb  utils.py
