[project]
name = "podcast-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "nemo-toolkit[asr]>=2.1.0",
    "python-dotenv>=1.0.1",
    "semantic-router>=0.0.72",
    "sentence-transformers>=3.3.1",
    "torchaudio>=2.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "taskipy>=1.14.1",
]

[tool.ruff]
include = ["pyproject.toml", "app/**/*.py", "tests/**/*.py", "utils/**/*.py"]

[tool.taskipy.tasks]
test = "uv run pytest -q"
lint = "uv run ruff check"