[project]
name = "podcast-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie[semantic]>=0.4.1",
    "chromadb>=0.6.3",
    "gliner>=0.2.16",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nemo-toolkit[asr]>=2.1.0",
    "openai>=1.63.0",
    "pydantic>=2.10.5",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "taskipy>=1.14.1",
]

[tool.ruff]
include = ["pyproject.toml", "app/**/*.py", "tests/**/*.py", "utils/**/*.py"]

[tool.taskipy.tasks]
test = "uv run pytest -q"
lint = "uv run ruff check"
format = "uv run ruff format"
clean = 'find . -type d -name "__pycache__" -exec rm -rf {} +'
